updated the dashboard

--- a/admin/assignment.html
+++ b/admin/assignment.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
-    Webinar-Course-Management-System
+    Content-Recommendation-System
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -43,11 +43,11 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="webinar.html">
+          <a class="nav-link" href="course.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fab fa-internet-explorer"></i>
             </div>
-            <span class="nav-link-text ms-1">Webinar</span>
+            <span class="nav-link-text ms-1">Courses</span>
           </a>
         </li>
         <li class="nav-item">
@@ -55,31 +55,24 @@
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-users"></i>
             </div>
-            <span class="nav-link-text ms-1">Member</span>
+            <span class="nav-link-text ms-1">Members</span>
           </a>
         </li>
+        
         <li class="nav-item">
-          <a class="nav-link  " href="test-management.html">
+          <a class="nav-link" href="quizz.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-folder-open"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Management</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="test-result.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-file-word"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Results</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active " href="certificate.html">
-            <div class="icon-sm bg-active shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-certificate"></i>
             </div>
-            <span class="nav-link-text ms-1">Certificates</span>
+            <span class="nav-link-text ms-1">Quizzes</span>
+          </a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link active" href="assignment.html">
+            <div class="icon-sm  bg-gradient-dark border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="fa fa-file-word text-white"></i>
+            </div>
+            <span class="nav-link-text ms-1">Assignments</span>
           </a>
         </li>
         <li class="nav-item">
@@ -90,6 +83,7 @@
             <span class="nav-link-text ms-1">Feedback</span>
           </a>
         </li>
+        
       </ul>
     </div>
   </aside>
@@ -100,9 +94,9 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
               <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Webinars</li>
+              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Assignments</li>
             </ol>
-            <h6 class="font-weight-bolder mb-0">Webinars</h6>
+            <h6 class="font-weight-bolder mb-0">Assignments</h6>
           </nav>
           <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -159,13 +153,13 @@
       </nav>    <!-- End Navbar -->
     <div class="container-fluid py-4">
       <div class="col-md-12 text-right">
-        <a class="btn bg-gradient-success mb-0" href="add-certificate.html"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add  New Certificate</a>
+        <a class="btn bg-gradient-dark mb-0" href="add-assignment.html"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add  New Assignments</a>
       </div><br>
       <div class="row">
         <div class="col-12">
           <div class="card mb-4">
             <div class="card-header pb-0">
-              <h6>Certificate List</h6>
+              <h6>Assignment Detail</h6>
             </div>
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
@@ -174,7 +168,7 @@
                     <tr>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Test Code</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Member Name</th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Certificate</th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Assignment Details</th>
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Action</th>
                       <th class="text-secondary opacity-7"></th>
                     </tr>
