--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
-    Webinar-Course-Management-System
+    Content-Recommendation-System
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -36,18 +36,18 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link  active" href="index.html">
-            <div class="icon-sm bg-active border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-tachometer-alt"></i>
+            <div class="icon-sm bg-gradient-dark border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="fa fa-tachometer-alt text-white"></i>
             </div>
             <span class="nav-link-text ms-1">Dashboard</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="webinar.html">
+          <a class="nav-link  " href="course.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fab fa-internet-explorer"></i>
             </div>
-            <span class="nav-link-text ms-1">Webinar</span>
+            <span class="nav-link-text ms-1">Courses</span>
           </a>
         </li>
         <li class="nav-item">
@@ -55,31 +55,23 @@
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-users"></i>
             </div>
-            <span class="nav-link-text ms-1">Member</span>
+            <span class="nav-link-text ms-1">Members</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="test-management.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-folder-open"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Management</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="test-result.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-file-word"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Results</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="certificate.html">
+          <a class="nav-link  " href="quizz.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-certificate"></i>
             </div>
-            <span class="nav-link-text ms-1">Certificates</span>
+            <span class="nav-link-text ms-1">Quizzes</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  " href="assignment.html">
+            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="fa fa-file-word"></i>
+            </div>
+            <span class="nav-link-text ms-1">Assignments</span>
           </a>
         </li>
         <li class="nav-item">
@@ -100,9 +92,9 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Webinars</li>
+            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">Webinars</h6>
+          <h6 class="font-weight-bolder mb-0">Dashboard</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -165,15 +157,15 @@
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Number of Webinars</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Number of Courses</p>
                     <h5 class="font-weight-bolder mb-0">
                       12
                     </h5>
                   </div>
                 </div>
                 <div class="col-4 text-end">
-                  <div class="bg-active shadow text-center border-radius-md">
-                    <i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
+                  <div class="bg-gradient-dark shadow text-center border-radius-md">
+                    <i class="ni ni-world text-lg opacity-10 text-white" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -193,8 +185,8 @@
                   </div>
                 </div>
                 <div class="col-4 text-end">
-                  <div class="bg-active shadow text-center border-radius-md">
-                    <i class="ni ni-user-run text-lg opacity-10" aria-hidden="true"></i>
+                  <div class="bg-gradient-dark shadow text-center border-radius-md">
+                    <i class="ni ni-user-run text-lg opacity-10 text-white" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -207,15 +199,15 @@
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Certificates Released</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Number of Quizzes/Assignments</p>
                     <h5 class="font-weight-bolder mb-0">
                       20
                     </h5>
                   </div>
                 </div>
                 <div class="col-4 text-end">
-                  <div class="bg-active shadow text-center border-radius-md">
-                    <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
+                  <div class="bg-gradient-dark shadow text-center border-radius-md">
+                    <i class="ni ni-paper-diploma text-lg opacity-10 text-white" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
