--- a/admin/add-member.html
+++ b/admin/add-member.html
@@ -1,3 +1,6 @@
+//certificate file -- quizzes
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +8,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
-    Webinar-Course-Management-System
+    Content-Recommendation-System
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -43,11 +46,11 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="webinar.html">
-            <div class="icon-sm bg-active shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+          <a class="nav-link" href="webinar.html">
+            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fab fa-internet-explorer"></i>
             </div>
-            <span class="nav-link-text ms-1">Webinar</span>
+            <span class="nav-link-text ms-1">Course Details</span>
           </a>
         </li>
         <li class="nav-item">
@@ -55,31 +58,23 @@
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-users"></i>
             </div>
-            <span class="nav-link-text ms-1">Member</span>
+            <span class="nav-link-text ms-1">Members</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="test-management.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-folder-open"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Management</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="test-result.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-file-word"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Results</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="certificate.html">
+          <a class="nav-link" href="quizz.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-certificate"></i>
             </div>
-            <span class="nav-link-text ms-1">Certificates</span>
+            <span class="nav-link-text ms-1">Quizzes</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="assignment.html">
+            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="fa fa-certificate"></i>
+            </div>
+            <span class="nav-link-text ms-1">Assignments</span>
           </a>
         </li>
         <li class="nav-item">
@@ -100,9 +95,9 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
               <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Webinars</li>
+              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Members</li>
             </ol>
-            <h6 class="font-weight-bolder mb-0">Webinars</h6>
+            <h6 class="font-weight-bolder mb-0">Members</h6>
           </nav>
           <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -158,11 +153,14 @@
         </div>
       </nav>    <!-- End Navbar -->
     <div class="container-fluid py-4">
+      <div class="col-md-12 text-right">
+        <a class="btn bg-gradient-dark mb-0" href="add-member.html"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add New Members</a>
+      </div><br>
       <div class="row">
         <div class="col-12">
           <div class="card mb-4">
             <div class="card-header pb-0">
-              <h6>Add Webinar</h6>
+              <h6>Add Members</h6>
             </div>
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
@@ -171,40 +169,28 @@
                     <div class="row">
                       <div class="col-xl-12 col-lg-5 col-md-7 mx-auto">
                         <div class="mb-3">
-                          <label>Webinar Name</label>
-                          <input type="text" class="form-control" placeholder="Webinar Name" aria-label="Name" aria-describedby="email-addon">
+                          <label>Member Name</label>
+                          <input type="text" class="form-control" placeholder="TST-101" aria-label="Name" aria-describedby="email-addon">
                         </div>
                     </div>
                     <div class="col-xl-12 col-lg-5 col-md-7 mx-auto">
                       <div class="mb-3">
-                        <label>Description</label>
-                        <textarea  class="form-control" placeholder="Description" ></textarea>
-                      </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-5 col-md-7 mx-auto">
-                      <div class="mb-3">
-                        <label>Speaker</label>
-                        <input type="text" class="form-control" placeholder="ex. John Doe" aria-label="Name" aria-describedby="email-addon">
-                      </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-5 col-md-7 mx-auto">
-                      <div class="mb-3">
-                        <label>Meeting Link</label>
-                        <input type="text" class="form-control" placeholder="Meeting Link" aria-label="Name" aria-describedby="email-addon">
-                      </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-5 col-md-7 mx-auto">
-                      <div class="mb-3">
-                        <label>Date</label>
-                        <input type="date" class="form-control" placeholder="" aria-label="Name" aria-describedby="email-addon">
-                      </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-5 col-md-7 mx-auto">
-                      <div class="mb-3">
-                        <label>Time</label>
-                        <input type="time" class="form-control" placeholder="" aria-label="Name" aria-describedby="email-addon">
+                        <label>Member Id</label>
+                        <input type="text" class="form-control" placeholder="ex. Cyber Security" aria-label="Name" aria-describedby="email-addon">
                       </div>
                   </div>
+                    <div class="col-xl-12 col-lg-5 col-md-7 mx-auto">
+                      <div class="mb-3">
+                        <label></label>
+                        <input type="text" class="form-control" placeholder="ex. John Doe" aria-label="Name" aria-describedby="email-addon">
+                      </div>
+                  </div>
+                  <div class="col-xl-12 col-lg-5 col-md-7 mx-auto">
+                    <div class="mb-3">
+                      <label>Quizzes</label>
+                      <input type="file" class="form-control" placeholder="" aria-label="Name" aria-describedby="email-addon">
+                    </div>
+                </div>
                     <div class="text-center">
                       <button type="button" class="btn bg-gradient-dark w-10 my-4 mb-2">Submit</button>
                     </div>
