--- a/admin/course.html
+++ b/admin/course.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
-    Webinar-Course-Management-System
+    Content-Recommendation-System
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -43,11 +43,11 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="webinar.html">
-            <div class="icon-sm bg-active shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fab fa-internet-explorer"></i>
+          <a class="nav-link active " href="course.html">
+            <div class="icon-sm bg-gradient-dark shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="fa fa-certificate text-white"></i>
             </div>
-            <span class="nav-link-text ms-1">Webinar</span>
+            <span class="nav-link-text ms-1">Courses</span>
           </a>
         </li>
         <li class="nav-item">
@@ -59,29 +59,23 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="test-management.html">
+          <a class="nav-link  " href="quizz.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-folder-open"></i>
+              <i class="fa fa-users"></i>
             </div>
-            <span class="nav-link-text ms-1">Test Management</span>
+            <span class="nav-link-text ms-1">Quizz</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="test-result.html">
+          <a class="nav-link  " href="assignment.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-file-word"></i>
+              <i class="fa fa-users"></i>
             </div>
-            <span class="nav-link-text ms-1">Test Results</span>
+            <span class="nav-link-text ms-1">Assignments</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="certificate.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-certificate"></i>
-            </div>
-            <span class="nav-link-text ms-1">Certificates</span>
-          </a>
-        </li>
+        
+        
         <li class="nav-item">
           <a class="nav-link  " href="feedback.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -100,9 +94,9 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
               <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Webinars</li>
+              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Courses</li>
             </ol>
-            <h6 class="font-weight-bolder mb-0">Webinars</h6>
+            <h6 class="font-weight-bolder mb-0">Courses</h6>
           </nav>
           <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -159,25 +153,22 @@
       </nav>    <!-- End Navbar -->
     <div class="container-fluid py-4">
       <div class="col-md-12 text-right">
-        <a class="btn bg-gradient-success mb-0" href="add-webinar.html"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add  New Webinar</a>
+        <a class="btn bg-gradient-dark bg-gradient-dark mb-0" href="add-course.html"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add New Course</a>
       </div><br>
       <div class="row">
         <div class="col-12">
           <div class="card mb-4">
             <div class="card-header pb-0">
-              <h6>Webinars List</h6>
+              <h6>Course Details</h6>
             </div>
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
                 <table class="table align-items-center mb-0">
                   <thead>
                     <tr>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Webinars Name</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Speaker</th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Date</th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Time</th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Link</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Test Code</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Instructor Name</th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Course Detail</th>
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Action</th>
                       <th class="text-secondary opacity-7"></th>
                     </tr>
@@ -185,28 +176,28 @@
                   <tbody>
                     <tr>
                       <td>
+                        <p class="text-xs text-secondary mb-0">TST-101</p>
+                      </td>
+                      <td>
                         <div class="d-flex px-2 py-1">
+                          <div>
+                            <img src="../assets/img/team-2.jpg" class="avatar avatar-sm me-3">
+                          </div>
                           <div class="d-flex flex-column justify-content-center">
-                            <h6 class="text-xs text-secondary mb-0">Webinar 1</h6>
+                            <h6 class="mb-0 text-sm">Richard Gran</h6>
+                            <p class="text-xs text-secondary mb-0">richard@gmail.com</p>
                           </div>
                         </div>
                       </td>
                       <td>
-                        <p class="text-xs text-secondary mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut<br> aliquip ex ea commodo consequat.</p>
+                        <div class="d-flex px-9 py-1">
+                          <div>
+                            <img src="../assets/img/cert.png" class=" avatar-lg me-1">
+                          </div>
+                        </div>
                       </td>
-                      <td class="align-middle text-center text-sm">
-                        <h6 class="text-xs text-secondary mb-0">Juan Dela Cruz</h6>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">23/04/2021</span>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">10:00 AM</span>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span><a href="#" class="text-secondary text-xs font-weight-bold">Meeting Link Information</a></span>
-                      </td>
-                      <td class="align-middle">
+                    </td>
+                      <td class="align-right">
                         <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           <i class="fa fa-edit"></i>
                         </a> |
@@ -217,65 +208,125 @@
                     </tr>
                     <tr>
                       <td>
+                        <p class="text-xs text-secondary mb-0">TST-102</p>
+                      </td>
+                      <td>
                         <div class="d-flex px-2 py-1">
+                          <div>
+                            <img src="../assets/img/marie.jpg" class="avatar avatar-sm me-3">
+                          </div>
                           <div class="d-flex flex-column justify-content-center">
-                            <h6 class="text-xs text-secondary mb-0">Webinar 2</h6>
+                            <h6 class="mb-0 text-sm">Miriam Eric</h6>
+                            <p class="text-xs text-secondary mb-0">miriam@gmail.com</p>
                           </div>
                         </div>
                       </td>
                       <td>
-                        <p class="text-xs text-secondary mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut<br> aliquip ex ea commodo consequat.</p>
+                        <div class="d-flex px-9 py-1">
+                          <div>
+                            <img src="../assets/img/cert.png" class=" avatar-lg me-1">
+                          </div>
+                        </div>
                       </td>
-                      <td class="align-middle text-center text-sm">
-                        <h6 class="text-xs text-secondary mb-0">Juan Luna</h6>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">23/04/2021</span>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">01:00 PM</span>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span><a href="#" class="text-secondary text-xs font-weight-bold">Meeting Link Information</a></span>
-                      </td>
-                      <td class="align-middle">
+                      <td class="align-right">
                         <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           <i class="fa fa-edit"></i>
                         </a> |
                         <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-                           <i class="fa fa-trash-alt"></i>
+                          <i class="fa fa-trash-alt"></i>
                         </a>
                       </td>
                     </tr>
                     <tr>
                       <td>
+                        <p class="text-xs text-secondary mb-0">TST-103</p>
+                      </td>
+                      <td>
                         <div class="d-flex px-2 py-1">
+                          <div>
+                            <img src="../assets/img/team-3.jpg" class="avatar avatar-sm me-3">
+                          </div>
                           <div class="d-flex flex-column justify-content-center">
-                            <h6 class="text-xs text-secondary mb-0">Webinar 3</h6>
+                            <h6 class="mb-0 text-sm">Michael Levi</h6>
+                            <p class="text-xs text-secondary mb-0">michael@gmail.com</p>
                           </div>
                         </div>
                       </td>
                       <td>
-                        <p class="text-xs text-secondary mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut<br> aliquip ex ea commodo consequat.</p>
+                        <div class="d-flex px-9 py-1">
+                          <div>
+                            <img src="../assets/img/cert.png" class=" avatar-lg me-1">
+                          </div>
+                        </div>
                       </td>
-                      <td class="align-middle text-center text-sm">
-                        <h6 class="text-xs text-secondary mb-0">John Doe</h6>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">23/04/2021</span>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">08:00 AM</span>
-                      </td>
-                      <td class="align-middle text-center">
-                        <span><a href="#" class="text-secondary text-xs font-weight-bold">Meeting Link Information</a></span>
-                      </td>
-                      <td class="align-middle">
+                      <td class="align-right">
                         <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           <i class="fa fa-edit"></i>
                         </a> |
                         <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-                           <i class="fa fa-trash-alt"></i>
+                          <i class="fa fa-trash-alt"></i>
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <p class="text-xs text-secondary mb-0">TST-104</p>
+                      </td>
+                      <td>
+                        <div class="d-flex px-2 py-1">
+                          <div>
+                            <img src="../assets/img/team-1.jpg" class="avatar avatar-sm me-3">
+                          </div>
+                          <div class="d-flex flex-column justify-content-center">
+                            <h6 class="mb-0 text-sm">Alexa Liras</h6>
+                            <p class="text-xs text-secondary mb-0">alexa@gmail.com</p>
+                          </div>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="d-flex px-9 py-1">
+                          <div>
+                            <img src="../assets/img/cert.png" class=" avatar-lg me-1">
+                          </div>
+                        </div>
+                      </td>
+                      <td class="align-right">
+                        <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                          <i class="fa fa-edit"></i>
+                        </a> |
+                        <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                          <i class="fa fa-trash-alt"></i>
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <p class="text-xs text-secondary mb-0">TST-105</p>
+                      </td>
+                      <td>
+                        <div class="d-flex px-2 py-1">
+                          <div>
+                            <img src="../assets/img/team-4.jpg" class="avatar avatar-sm me-3">
+                          </div>
+                          <div class="d-flex flex-column justify-content-center">
+                            <h6 class="mb-0 text-sm">Laurent Perrier</h6>
+                            <p class="text-xs text-secondary mb-0">laurent@gmail.com</p>
+                          </div>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="d-flex px-9 py-1">
+                          <div>
+                            <img src="../assets/img/cert.png" class=" avatar-lg me-1">
+                          </div>
+                        </div>
+                      </td>
+                      <td class="align-right">
+                        <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                          <i class="fa fa-edit"></i>
+                        </a> |
+                        <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                          <i class="fa fa-trash-alt"></i>
                         </a>
                       </td>
                     </tr>
