--- a/admin/feedback.html
+++ b/admin/feedback.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
-    Webinar-Course-Management-System
+    Content-Recommendation-System
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -43,11 +43,11 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="webinar.html">
+          <a class="nav-link " href="course.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fab fa-internet-explorer"></i>
             </div>
-            <span class="nav-link-text ms-1">Webinar</span>
+            <span class="nav-link-text ms-1">Courses</span>
           </a>
         </li>
         <li class="nav-item">
@@ -55,37 +55,31 @@
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-users"></i>
             </div>
-            <span class="nav-link-text ms-1">Member</span>
+            <span class="nav-link-text ms-1">Members</span>
           </a>
         </li>
+  
+  
         <li class="nav-item">
-          <a class="nav-link  " href="test-management.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-folder-open"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Management</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="test-result.html">
-            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-file-word"></i>
-            </div>
-            <span class="nav-link-text ms-1">Test Results</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  " href="certificate.html">
+          <a class="nav-link  " href="quizz.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa fa-certificate"></i>
             </div>
-            <span class="nav-link-text ms-1">Certificates</span>
+            <span class="nav-link-text ms-1">Quizzes</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  " href="assignment.html">
+            <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="fa fa-certificate"></i>
+            </div>
+            <span class="nav-link-text ms-1">Assignments</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link active " href="feedback.html">
-            <div class="icon-sm bg-active shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa fa-comment-dots"></i>
+            <div class="icon-sm bg-gradient-dark shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="fa fa-comment-dots text-white"></i>
             </div>
             <span class="nav-link-text ms-1">Feedback</span>
           </a>
@@ -100,9 +94,9 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Webinars</li>
+            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Feedback</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">Webinars</h6>
+          <h6 class="font-weight-bolder mb-0">Feedback</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
