edited add-member.html and member.html

--- a/admin/add-member.html
+++ b/admin/add-member.html
@@ -1,6 +1,3 @@
-//certificate file -- quizzes
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -46,11 +43,11 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="webinar.html">
+          <a class="nav-link" href="course.html">
             <div class="icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fab fa-internet-explorer"></i>
             </div>
-            <span class="nav-link-text ms-1">Course Details</span>
+            <span class="nav-link-text ms-1">Courses</span>
           </a>
         </li>
         <li class="nav-item">
@@ -175,22 +172,17 @@
                     </div>
                     <div class="col-xl-12 col-lg-5 col-md-7 mx-auto">
                       <div class="mb-3">
-                        <label>Member Id</label>
+                        <label>Username</label>
                         <input type="text" class="form-control" placeholder="ex. Cyber Security" aria-label="Name" aria-describedby="email-addon">
                       </div>
                   </div>
                     <div class="col-xl-12 col-lg-5 col-md-7 mx-auto">
                       <div class="mb-3">
-                        <label></label>
+                        <label>Password</label>
                         <input type="text" class="form-control" placeholder="ex. John Doe" aria-label="Name" aria-describedby="email-addon">
                       </div>
                   </div>
-                  <div class="col-xl-12 col-lg-5 col-md-7 mx-auto">
-                    <div class="mb-3">
-                      <label>Quizzes</label>
-                      <input type="file" class="form-control" placeholder="" aria-label="Name" aria-describedby="email-addon">
-                    </div>
-                </div>
+        
                     <div class="text-center">
                       <button type="button" class="btn bg-gradient-dark w-10 my-4 mb-2">Submit</button>
                     </div>
